--- a/Views/Funcionarios/Index.cshtml
+++ b/Views/Funcionarios/Index.cshtml
@@ -7,6 +7,7 @@
     <p>CPF: @funcionario.Cpf</p>
     <p>Nome: @funcionario.Nome</p>
     <p>Salário: @funcionario.Salario</p>
-    <a href="/novarota" class="btn btn-success">Editar</a>
+    <a href="/Funcionarios/Editar/@funcionario.Id" class="btn btn-success">Editar</a>
+    <a href="/Funcionarios/Deletar/@funcionario.Id" class="btn btn-danger">Deletar</a>
     <hr>
 }
